Made it so a user can remove a person from the list - need to get it to auto do it when the button is pressed

--- a/wordBombHelper/wordBombHelper/wordBombHelper.csproj
+++ b/wordBombHelper/wordBombHelper/wordBombHelper.csproj
@@ -21,5 +21,12 @@
     <EmbeddedResource Update="Views\GamePage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\PlayerPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Images\" />
   </ItemGroup>
 </Project>
