Able to navigate and find the players and no of players

--- a/wordBombHelper/wordBombHelper/wordBombHelper.csproj
+++ b/wordBombHelper/wordBombHelper/wordBombHelper.csproj
@@ -21,6 +21,9 @@
     <EmbeddedResource Update="Views\GamePage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\OpeningPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\PlayerPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
